--- a/faned/scripts/cfg/music.cfg
+++ b/faned/scripts/cfg/music.cfg
@@ -1,6 +1,6 @@
 // Project: Music Player
 // License: Creative Commons — CC0 1.0 Universal
-// Version: 1.0
+// Version: 1.1
 // Author: Nyne
 //
 // ***********************************************************************************
@@ -22,24 +22,38 @@
 
 playasong = []
 
-sleep 1 [
+createine = [if (! (getalias $arg1)) [$arg1 = $arg2]]
+createine _music_path "packages/fanatic"
+createine _musicvol $musicvol
+createine _muted 0
+
+sleep 100 [
     playasong = [
-       local _playlist _track
-        loopfiles f "faned/music" "" [
+        _music_files = ""
+        loopfiles f $_music_path "" [
             if (> (indexof [.mid .mp3 .ogg .wav .wma] (substr $f (- (strlen $f) 4))) -1) [
-                _playlist = (concat (getalias _playlist) [[@@f]])
+                _music_files = (concat (getalias _music_files) [[@@f]])
             ]
         ]
-        _track = (at $_playlist (rnd (listlen $_playlist)))
-        music [../faned/music/@_track] playasong
-        if (> $musicvol 1) [echo "^f9FanEd^f7::music:^f4" $_track]
+        _music_files = (sortlist $_music_files x y [<=s $x $y])
+        _rnd = (at $_music_files (rnd (listlen $_music_files)))
+        music (concatword "../" $_music_path "/" $_rnd) playasong
+        if (> $musicvol 1) [
+            if (|| [=s $_music_path "packages/fanatic"] [=s $_music_path "packages/fanatic/"]) [
+                 if (= $rnd 1) [echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Demagogue"]
+                 if (= $rnd 2) [echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Vexation"]
+                 if (= $rnd 3) [echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Inchoate"]
+                 if (= $rnd 4) [echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Incindental"]
+                 if (= $rnd 5) [echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Tribulation"]
+                 if (= $rnd 6) [echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Mephistopheles"]
+                 if (= $rnd 7) [echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Antipodes"]
+                 if (= $rnd 8) [echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Ostentation"]
+            ] [
+                echo "^f9FanEd^f7::music:^f4" $_rnd
+            ]
+        ]
     ]; playasong
 ]
-
-createine = [if (! (getalias $arg1)) [$arg1 = $arg2]]
-createine _music_path "faned/music/"
-createine _musicvol $musicvol
-createine _muted 1
 
 newgui music [
     guistayopen [
@@ -47,8 +61,6 @@ newgui music [
             guitext "Set music directory: " "info.jpg"
             guifield _music_path -68
         ]
-        guistrut 1
-        guitext (concat "Current music stored @" $_music_path) "info.jpg"
         guistrut 1
         _music_files = ""
         loopfiles f $_music_path "" [
@@ -59,10 +71,45 @@ newgui music [
         _music_files = (sortlist $_music_files x y [<=s $x $y])
         guilist [
             guilist [
-                looplist f $_music_files [
-                    guibutton (concat "Play^f9" $f) [
-                        music (concatword "../" $_music_path "/" @f) playasong
-                        echo (concat "^f9FanEd^f7::music:^f4" @f)
+                if (|| [=s $_music_path "packages/fanatic"] [=s $_music_path "packages/fanatic/"]) [
+                    guibutton "Play^f9 Marc A. Pullen - Odious - Demagogue" [
+                        music fanatic/1.ogg playasong
+                        echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Demagogue"
+                    ]
+                    guibutton "Play^f9 Marc A. Pullen - Odious - Vexation" [
+                        music fanatic/2.ogg playasong
+                        echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Vexation"
+                    ]
+                    guibutton "Play^f9 Marc A. Pullen - Odious - Inchoate" [
+                        music fanatic/3.ogg playasong
+                        echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Inchoate"
+                    ]
+                    guibutton "Play^f9 Marc A. Pullen - Odious - Incindental" [
+                        music fanatic/4.ogg playasong
+                        echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Incindental"
+                    ]
+                    guibutton "Play^f9 Marc A. Pullen - Odious - Tribulation" [
+                        music fanatic/5.ogg playasong
+                        echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Tribulation"
+                    ]
+                    guibutton "Play^f9 Marc A. Pullen - Odious - Mephistopheles" [
+                        music fanatic/6.ogg playasong
+                        echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Mephistopheles"
+                    ]
+                    guibutton "Play^f9 Marc A. Pullen - Odious - Antipodes" [
+                        music fanatic/7.ogg playasong
+                        echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Antipodes"
+                    ]
+                    guibutton "Play^f9 Marc A. Pullen - Odious - Ostentation" [
+                        music fanatic/8.ogg playasong
+                        echo "^f9FanEd^f7::music:^f4 Marc A. Pullen - Odious - Ostentation"
+                    ]
+                ] [
+                    looplist f $_music_files [
+                        guibutton (concat "Play^f9" $f) [
+                            music (concatword "../" $_music_path "/" @f) playasong
+                            echo (concat "^f9FanEd^f7::music:^f4" @f)
+                        ]
                     ]
                 ]
             ]
@@ -72,8 +119,6 @@ newgui music [
             guilist [
                 guilist [
                     guilist [
-                        if (> $musicvol 1) [guitext (concatword "^f9" (loopconcatword i (rnd 18) [ result ":" ])) 0]
-                        guistrut 1
                         guitext "Music Volume:"
                         guislider musicvol
                         guistrut 1
@@ -85,6 +130,28 @@ newgui music [
                                 guibutton "Mute" [_muted = 0; musicvol $_musicvol] checkbox_on
                             ] [
                                 guibutton "Mute" [_muted = 1; _musicvol = $musicvol; musicvol 1] checkbox_off
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+            guistrut 3
+            guibar
+            guistrut 3
+            guilist [
+                guilist [
+                    guilist [
+                        guilist [
+                            guilist [
+                                guitext "Equalizer"
+                                if (> $musicvol 1) [
+                                    guistrut 1
+                                    guitext (concatword " ^f9" (loopconcatword i (rnd 24) [ result ":" ])) 0
+                                    guitext (concatword " ^f9" (loopconcatword i (rnd 14) [ result ":" ])) 0
+                                    guitext (concatword " ^f9" (loopconcatword i (rnd 18) [ result ":" ])) 0
+                                    guitext (concatword " ^f9" (loopconcatword i (rnd 18) [ result ":" ])) 0
+                                    guitext (concatword " ^f9" (loopconcatword i (rnd 20) [ result ":" ])) 0
+                                ]
                             ]
                         ]
                     ]
