--- a/faned/scripts/cfg/derpy.cfg
+++ b/faned/scripts/cfg/derpy.cfg
@@ -1,6 +1,6 @@
 // Project: The Derpy Editing Thing Fork
 // License: Creative Commons — CC0 1.0 Universal
-// Version: 0.8
+// Version: 0.9
 // Author: Nyne
 // Notes: Based on Penguin's »The Derpy Editing Thing« project (Public Domain).
 //        <http://quadropolis.us/node/3995>
@@ -22,11 +22,23 @@
 // *                                                                                 *
 // ***********************************************************************************
 
-createine = [ if (! (getalias $arg1)) [ $arg1 = $arg2 ] ]
+createine = [if (! (getalias $arg1)) [$arg1 = $arg2]]
 
 createine _derpy_entdrop 0
-
-loop i 13 [ createine [ _derpy_ent_@i ] 0 ]
+createine _derpy_ent_0 "particles 9 320 10 0x5FF"
+createine _derpy_ent_1 "particles 13 310 -1 0x5FF"
+createine _derpy_ent_2 "particles 4 309 10 0x5FF"
+createine _derpy_ent_3 0
+createine _derpy_ent_4 0
+createine _derpy_ent_5 0
+createine _derpy_ent_6 0
+createine _derpy_ent_7 0
+createine _derpy_ent_8 0
+createine _derpy_ent_9 0
+createine _derpy_ent_10 0
+createine _derpy_ent_11 0
+createine _derpy_ent_12 0
+createine _derpy_ent_13 0
 
 _derpy_rnd = 0
 _derpy_state = 0
@@ -36,7 +48,7 @@ _derpy_loop = [
         if (! $editing) edittoggle
         _derpy_rnd = (+ (rnd 0xD05) 1)
         entdrop $_derpy_entdrop
-        loop i 13 [ do [ if (!=s @[_derpy_ent_@i] "0") [ newent @[_derpy_ent_@i] ] ] ]
+        loop i 13 [do [if (!=s @[_derpy_ent_@i] "0") [newent @[_derpy_ent_@i]]]]
         entproperty 4 $_derpy_rnd
         if $editing edittoggle
         sleep 1 [
@@ -45,8 +57,8 @@ _derpy_loop = [
             delent
             if $editing edittoggle
             _derpy_loop
-        ]
-    ]
+       ]
+   ]
 ]
 
 derpytoggle = [
@@ -55,13 +67,16 @@ derpytoggle = [
             _derpy_state = 0
             entdrop $_entdrop
             echo "^f9FanEd^f7::derpymode: OFF"
-        ] [
+       ] [
             _derpy_state = 1
             _entdrop = $entdrop
             _derpy_loop
             echo "^f9FanEd^f7::derpymode: ON"
-        ]
-    ]
+       ]
+    ] [
+        echo "^f9FanEd^f7::derpymode: ^f3#error: ^f7operation only allowed in edit mode"
+        sound (registersound "../../faned/sounds/freesound.org/56097_7037-lq" 255)
+   ]
 ]
 
 newgui derpy [
@@ -76,7 +91,7 @@ newgui derpy [
                     guiradio "to my head " _derpy_entdrop 0
                     guiradio "to my feets " _derpy_entdrop 1
                     guiradio "on selection (default)" _derpy_entdrop 2
-                ] 
+               ] 
                 guistrut 1
                 loop i 13 [
                     guilist [
@@ -84,9 +99,9 @@ newgui derpy [
                         guistrut 1
                         _derpy_ent_@i = $_derpy_ent_@i
                         guifield _derpy_ent_@i -43
-                    ]
-                ]
-            ]
+                   ]
+               ]
+           ]
             guistrut 3
             guilist [
                 guilist [
@@ -109,7 +124,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: acid" [
                             _derpy_entdrop = 0
                             _derpy_ent_0 = "particles 3 1000 (rnd 0xFFFFFF)"
@@ -126,7 +141,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: bacteria" [
                             _derpy_entdrop = 0
                             _derpy_ent_0 = "particles 9 277 0 (rnd 0xFFFFFF)"
@@ -143,7 +158,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: bunny hop" [
                             _derpy_entdrop = 1
                             _derpy_ent_0 = "jumppad 20"
@@ -160,7 +175,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: carrot" [
                             _derpy_entdrop = 0
                             _derpy_ent_0 = "carrot"
@@ -177,7 +192,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: cart" [
                             _derpy_entdrop = 1
                             _derpy_ent_0 = "mapmodel 30"
@@ -194,7 +209,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: female" [
                             _emotions = ["0" "1" "2" "3" "4" "7" "9" "10" "11" "12" "13" "32" "33"]
                             _derpy_entdrop = 0
@@ -212,7 +227,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: flary" [
                             _derpy_entdrop = 1
                             _derpy_ent_0 = "particles 4 343 30 (rnd 0xFFFFFF)"
@@ -229,7 +244,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: flashy" [
                             _derpy_entdrop = 0
                             _derpy_ent_0 = "particles 0 100000 100000 (rnd 0xFFFFFF)"
@@ -246,7 +261,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: god" [
                             _derpy_entdrop = 1
                             _derpy_ent_0 = "mapmodel 84"
@@ -263,7 +278,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: helicopter" [
                             _derpy_entdrop = 0
                             _derpy_ent_0 = "mapmodel 184"
@@ -280,7 +295,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: moonwalk" [
                             _derpy_entdrop = 1
                             _derpy_ent_0 = "mapmodel 131"
@@ -297,7 +312,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: mystery" [
                             _derpy_entdrop = 0
                             _derpy_ent_0 = "particles 9 320 10 0x5FF"
@@ -314,7 +329,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: smoker" [
                             _derpy_entdrop = 0
                             _derpy_ent_0 = "particles 1 0x1E"
@@ -331,7 +346,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: speedhack" [
                             _derpy_entdrop = 1
                             _derpy_ent_0 = "particles 0"
@@ -348,7 +363,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: X10" [
                             _derpy_entdrop = 0
                             _derpy_ent_0 = "particles 0x23 (rnd 0xFF) (rnd 0xFF) (rnd 0xFF)"
@@ -365,7 +380,7 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guibutton "Special Derpy: zombie" [
                             _derpy_entdrop = 1
                             _derpy_ent_0 = "bullets"
@@ -382,12 +397,12 @@ newgui derpy [
                             _derpy_ent_11 = 0
                             _derpy_ent_12 = 0
                             _derpy_ent_13 = 0
-                        ] "action"
+                       ] "action"
                         guistrut 1
-                    ]
-                ]
-            ]
-        ]
-    ]
+                   ]
+               ]
+           ]
+       ]
+   ]
 ] "Derpy"
 
