Add rndlights.cfg, license, cleanups.

--- a/faned/scripts/cfg/rndlights.cfg
+++ b/faned/scripts/cfg/rndlights.cfg
@@ -1,4 +1,4 @@
-// Project: Gotosel Teleporter
+// Project: Random Lights Generator
 // License: Creative Commons — CC0 1.0 Universal
 // Version: 1.0
 // Author: Nyne
@@ -20,22 +20,19 @@
 // *                                                                                 *
 // ***********************************************************************************
 
-teleport = [
-    if (!= $getmode 1) [
-        echo "^f9FanEd^f7::teleport: ^f3#error: ^f7operation only allowed in edit mode"
-        sound (registersound "../../faned/sounds/freesound.org/56097_7037-lq" 255)
+rndlights = [
+    if (= $arg1 -1) [
+        echo "^f9FanEd^f7::rndlights: ^f2#help: ^f7Syntax: /rndlights [count] [brightness] [max r] [max g] [max b]"
     ] [
-       _bs_gridpower = $gridpower
-       edittoggle
-       gridpower 0
-       sleep 0 [
-           editdrag
-           gotosel
-           sound 14
-           entmoving 0
-           edittoggle
-           gridpower $_bs_gridpower
+        loop i $arg1 [
+            if (= $editing 0) [
+                edittoggle; entcancel; entfind; numents = $enthavesel; entcancel; edittoggle
+            ] [
+                entcancel; entfind; numents = $enthavesel; entcancel
+            ]
+            editent (+ $numents 1) (rnd 1024) (rnd 1024) 529 1 $arg2 (rnd $arg3) (rnd $arg4) (rnd $arg5)
         ]
     ]
+    sleep 1000 calclight
 ]
 
