--- a/faned/data/defaults.cfg
+++ b/faned/data/defaults.cfg
@@ -239,9 +239,14 @@ sayteamcommand = [
 ]
 bind Y [sayteamcommand]
 
-bind CARET "saycommand /"
-bind BACKQUOTE "saycommand /"
-bind SLASH "saycommand /"
+sayexeccommand = [
+    inputcommand (if (>= $numargs 1) [result $arg1] [result ""]) [
+        do $commandbuf
+    ] (concatword "[exec]")
+]
+bind CARET sayexeccommand
+bind BACKQUOTE sayexeccommand
+bind SLASH sayexeccommand
 
 bind LCTRL "allowspedit"
 bind RCTRL "allowspedit"
