Add sauerworld flag reskins.

--- a/faned/scripts/cfg/options.cfg
+++ b/faned/scripts/cfg/options.cfg
@@ -861,6 +861,18 @@ newgui options [
                         ] "checkbox_off.jpg" 
                     ]
                     guistrut 1
+                    if $_sauerworld_flags [ 
+                        guibutton "sauerworld.org: Flags" [
+                            removezip "faned/skins/sauerworld_flags.pak"
+                            _sauerworld_flags = 0
+                        ] "checkbox_on.jpg" 
+                    ] [ 
+                        guibutton "sauerworld.org: Flags" [
+                            addzip "faned/skins/sauerworld_flags.pak"
+                            _sauerworld_flags = 1
+                        ] "checkbox_on.jpg" 
+                    ]
+                    guistrut 1
                     if $_k1p57a_pickups [ 
                         guibutton "K1P57A: Pickups" [
                             removezip "faned/skins/k1p57a_pickups.pak"
