--- a/faned/init.cfg
+++ b/faned/init.cfg
@@ -97,6 +97,11 @@ if $_pyccna_captaincannon_zombie [
     addzip "faned/skins/pyccna_captaincannon_zombie.pak"
 ]
 
+createine _sauerworld_flags 1
+if $_sauerworld_flags [
+    addzip "faned/skins/sauerworld_flags.pak"
+]
+
 createine _k1p57a_pickups 0
 if $_k1p57a_pickups [
     addzip "faned/skins/k1p57a_pickups.pak"
