Add /printdate and /printuptime.

--- a/faned/data/defaults.cfg
+++ b/faned/data/defaults.cfg
@@ -367,5 +367,8 @@ editbind KP5 [setblendpaintmode 5]
 editbind KP8 [scrollblendbrush -1]
 editbind KP9 [scrollblendbrush  1]
 
+printdate = [echo (date It's %A, %m/%d/%Y at %r.)]
+printuptime = [echo (concatword "Uptime: " (uptime) ".")]
+
 url = "https://github.com/fanaticclan/client"
 
