Add more weapon variables, cleanups.

--- a/faned/scripts/cfg/demos.cfg
+++ b/faned/scripts/cfg/demos.cfg
@@ -1,4 +1,4 @@
-// Project: Demo File Browser
+// Project: Demo Browser
 // License: Creative Commons — CC0 1.0 Universal
 // Version: 1.0
 // Author: Nyne
