--- a/faned/scripts/cfg/options.cfg
+++ b/faned/scripts/cfg/options.cfg
@@ -27,12 +27,6 @@ newgui options [
                         guilist [guitext "Crosshair Sensitivity (zoom): "; newzoomsens = $zoomsens; guifield newzoomsens 8 [zoomsens $newzoomsens]]
                     ]
                     guistrut 1
-                    guilist [ 
-                        guitext "// Crosshair:";
-                        guistrut 1
-                        guibutton "> Configure" [showgui crosshairs] 0
-                    ]
-                    guistrut 1
                     guilist [
                         guilist [
                             guicheckbox "crosshairfx" crosshairfx 
@@ -49,7 +43,7 @@ newgui options [
                         guilist [
                            guilist [
                                 guilist [
-                                    guiimage (getcrosshair) [showgui crosshairsettings] 2.5
+                                    guiimage (getcrosshair) [showgui crosshairs] 2.5
                                 ]
                             ]
                         ]
@@ -66,13 +60,13 @@ newgui options [
                     guitext "zoomoutvel: " 
                     guislider zoomoutvel 
                 ]
-                guistrut 5
+                guistrut 3
                 guibar
-                guistrut 5
+                guistrut 3
                 guilist [
                     guilist [
                         guilist [
-                            guitext "// Damage:" 
+                            guitext "// Dying:" 
                             guibar
                             guicheckbox "blood" blood
                             if $blood [
@@ -99,75 +93,9 @@ newgui options [
                             ] [ 
                                guibutton "deathpanic" [deathpanicsound 1; deathpanicscreen 1] "checkbox_off.jpg" 
                             ]
-                            guistrut 1
-                            guitext "// Death" 
-                            guibar
-                            guicheckbox "Ragdoll Deaths" ragdoll 
-                            if $ragdoll [ guicheckbox "Keep Dead" ragdollmillis 10000 ]
-                            guicheckbox "Hide Dead" hidedead2
-                        ]
-                    ]
-                ]
-                guistrut 5
-                guibar
-                guistrut 5
-                guilist [
-                    guilist [
-                        guilist [
-                            guilist [
-                                guilist [ 
-                                    guitext "// Guns"
-                                    guibar
-                                    guitext "/hudgunalpha: " 0
-                                    guislider hudgunalpha
-                                    guistrut 1
-                                    guitext "/hudgunsdir:" 0
-                                    guibar
-                                    guitext "^f3Restart required to complete changes."
-                                    guistrut 1
-                                    guiradio "Default" _gs 1 [
-                                        hudgunsdir ""
-                                        removezip "faned/skins/calinou_hudguns_transparent.pak"
-                                        _calinou_hudguns_transparent = 0
-                                    ]
-                                    guiradio "Classic" _gs 2 [
-                                        hudgunsdir "../../faned/skins/hudguns_classic"
-                                        removezip "faned/skins/calinou_hudguns_transparent.pak"
-                                        _calinou_hudguns_transparent = 0
-                                    ]
-                                    guiradio "CTF1"     _gs 3 [
-                                        hudgunsdir "../../faned/skins/hudguns_ctf"
-                                        removezip "faned/skins/calinou_hudguns_transparent.pak"
-                                        _calinou_hudguns_transparent = 0
-                                    ]
-                                    guiradio "CTF2"    _gs 4 [
-                                        hudgunsdir "../../faned/skins/hudguns_ctf2"
-                                        removezip "faned/skins/calinou_hudguns_transparent.pak"
-                                        _calinou_hudguns_transparent = 0
-                                    ]
-                                    guiradio "CTF3"    _gs 5 [
-                                        hudgunsdir "../../faned/skins/hudguns_ctf3"
-                                        removezip "faned/skins/calinou_hudguns_transparent.pak"
-                                        _calinou_hudguns_transparent = 0
-                                    ]
-                                    guiradio "Solaris" _gs 6 [
-                                        hudgunsdir "../../faned/skins/hudguns_solaris"
-                                        removezip "faned/skins/calinou_hudguns_transparent.pak"
-                                        _calinou_hudguns_transparent = 0
-                                    ]
-                                    guiradio "Transparent" _gs 7 [
-                                        hudgunsdir ""
-                                        addzip "faned/skins/calinou_hudguns_transparent.pak"
-                                        _calinou_hudguns_transparent = 1
-                                    ]
-                                    guistrut 1
-                                    guilist [
-                                         guitext "// Shots:"
-                                         guistrut 1
-                                         guibutton "> Configure" [showgui shots] 0
-                                    ]
-                                ]
-                            ]
+                            guicheckbox "hidedead" hidedead
+                            guicheckbox "ragdolls" ragdoll 
+                            if $ragdoll [ guicheckbox "ragdollmillis" ragdollmillis 10000 ]
                         ]
                     ]
                 ]
@@ -938,13 +866,58 @@ newgui options [
                         _suicizer_pickups             = 0; removezip "faned/skins/suicizer_pickups.pak"
                     ]
                 ]
-                guistrut 5
+                guistrut 3
                 guibar
-                guistrut 5
+                guistrut 3
                 guilist [
                     guilist [
                         guilist [
-                            guitext "// Settings"
+                            guitext "// Hudguns"
+                            guibar
+                            guitext "^f3Restart required to complete changes."
+                            guibar
+                            guitext "hudgunsdir:" 0
+                            guistrut 1
+                            guiradio "Default" _gs 1 [
+                                hudgunsdir ""
+                                removezip "faned/skins/calinou_hudguns_transparent.pak"
+                                _calinou_hudguns_transparent = 0
+                            ]
+                            guiradio "Classic" _gs 2 [
+                                hudgunsdir "../../faned/skins/hudguns_classic"
+                                removezip "faned/skins/calinou_hudguns_transparent.pak"
+                                _calinou_hudguns_transparent = 0
+                            ]
+                            guiradio "CTF1"     _gs 3 [
+                                hudgunsdir "../../faned/skins/hudguns_ctf"
+                                removezip "faned/skins/calinou_hudguns_transparent.pak"
+                                _calinou_hudguns_transparent = 0
+                            ]
+                            guiradio "CTF2"    _gs 4 [
+                                hudgunsdir "../../faned/skins/hudguns_ctf2"
+                                removezip "faned/skins/calinou_hudguns_transparent.pak"
+                                _calinou_hudguns_transparent = 0
+                            ]
+                            guiradio "CTF3"    _gs 5 [
+                                hudgunsdir "../../faned/skins/hudguns_ctf3"
+                                removezip "faned/skins/calinou_hudguns_transparent.pak"
+                                _calinou_hudguns_transparent = 0
+                            ]
+                            guiradio "Solaris" _gs 6 [
+                                hudgunsdir "../../faned/skins/hudguns_solaris"
+                                removezip "faned/skins/calinou_hudguns_transparent.pak"
+                                _calinou_hudguns_transparent = 0
+                            ]
+                            guiradio "Transparent" _gs 7 [
+                                hudgunsdir ""
+                                addzip "faned/skins/calinou_hudguns_transparent.pak"
+                                _calinou_hudguns_transparent = 1
+                            ]
+                            guistrut 1
+                            guitext "hudgunalpha: " 0
+                            guislider hudgunalpha
+                            guistrut 1
+                            guitext "// Playermodels"
                             guibar
                             guilist [
                                 guiradio "Blue Team" _js 1 [teamblue] 
