--- a/faned/data/sounds.cfg
+++ b/faned/data/sounds.cfg
@@ -122,7 +122,7 @@ registersound "../../faned/sounds/q009/csh3" 255 // S_SCH3
 registersound "../../faned/sounds/q009/rocket" 255 // S_ROCKET
 
 registersound "../../faned/sounds/q009/hb" 150 // S_HEARTBEAT
-registersound "../../faned/sounds/bloodfrontier/owned" 255
+registersound "../../faned/sounds/bloodfrontier/owned" 255 // S_GREATSHOT
 
 registersound "../../faned/sounds/redeclipse/chat" 200 // S_CHAT
 registersound "../../faned/sounds/redeclipse/respawn" 150 // S_RESPAWN
