Add Oxima hudguns.

--- a/faned/scripts/cfg/options.cfg
+++ b/faned/scripts/cfg/options.cfg
@@ -674,7 +674,7 @@ newgui options [
                     guitext "// Reskins"
                     guibar
                     guitext "^f3Restart required to complete changes."
-                    guistrut 1
+                    guibar
                     if $_pyccna_mrfixit [ 
                         guibutton "Pyccna: Mr. Fixit" [
                             removezip "faned/skins/pyccna_mrfixit.pak"
@@ -903,12 +903,17 @@ newgui options [
                                 removezip "faned/skins/calinou_hudguns_transparent.pak"
                                 _calinou_hudguns_transparent = 0
                             ]
-                            guiradio "Solaris" _gs 6 [
+                            guiradio "Oxima" _gs 6 [
+                                hudgunsdir "../../faned/skins/hudguns_oxima"
+                                removezip "faned/skins/calinou_hudguns_transparent.pak"
+                                _calinou_hudguns_transparent = 0
+                            ]
+                            guiradio "Solaris" _gs 7 [
                                 hudgunsdir "../../faned/skins/hudguns_solaris"
                                 removezip "faned/skins/calinou_hudguns_transparent.pak"
                                 _calinou_hudguns_transparent = 0
                             ]
-                            guiradio "Transparent" _gs 7 [
+                            guiradio "Transparent" _gs 8 [
                                 hudgunsdir ""
                                 addzip "faned/skins/calinou_hudguns_transparent.pak"
                                 _calinou_hudguns_transparent = 1
