Oxima hudguns md3 fix.

--- a/faned/skins/hudguns_oxima/shotg/blue/md3.cfg
+++ b/faned/skins/hudguns_oxima/shotg/blue/md3.cfg
@@ -9,7 +9,7 @@ md3skin w_shotgun "../shotgun.png" "<mad:1/0/1>../shotgun_spec.jpg"
 md3bumpmap w_shotgun "../bump.jpg"
 md3spec w_shotgun 250
 
-md3skin w_shotgun_laser "<rotate:1>../shotgun_laser.jpg"
+md3skin w_shotgun_laser "<rotate:1>../shotgun_laser.png"
 md3spec w_shotgun_laser 70
 
 md3link 0 1 tag_weapon
