Fix forgotten shot variables, cleanups.

--- a/faned/scripts/cfg/irc.cfg
+++ b/faned/scripts/cfg/irc.cfg
@@ -1,6 +1,6 @@
 // Fanatic Edition: irc.cfg
 
-_sauerplayer = (concatword "sauerplayer_" (rnd 99999))
+_saurus = (concatword "saurus_" (rnd 99999))
 
 createine = [if (! (getalias $arg1)) [$arg1 = $arg2]]
 
@@ -8,8 +8,8 @@ createine _ircnet "kerat.net"
 createine _irchost "chat.kerat.net"
 createine _ircport 6667
 createine _ircchan "#fanatic"
-createine _ircnick $_sauerplayer
-createine _irchighlight $_sauerplayer
+createine _ircnick $_saurus
+createine _irchighlight $_saurus
 createine _ircquitmsg "https://github.com/fanaticclan/client"
 createine _ircautoconn 0
 
