Add win/lose/tie intermission sounds.

--- a/faned/data/sounds.cfg
+++ b/faned/data/sounds.cfg
@@ -102,6 +102,10 @@ registersound "../../faned/sounds/redeclipse/captured" 255
 registersound "../../faned/sounds/redeclipse/reset" 255
 registersound "../../faned/sounds/redeclipse/captured" 255
 
+registersound "../../faned/sounds/zehirmahnn/tie" 255
+registersound "../../faned/sounds/zehirmahnn/win" 255
+registersound "../../faned/sounds/zehirmahnn/lose" 255
+
 registersound "soundsnap/burn"
 registersound "soundsnap/chainsaw_attack" 150
 registersound "soundsnap/chainsaw_idle" 230
