Add getcustommaps and getcustommapslen to library.cfg.

--- a/faned/scripts/cfg/library.cfg
+++ b/faned/scripts/cfg/library.cfg
@@ -285,6 +285,26 @@ getcamy = [result (at (getcampos) 1)]
 
 getcamz = [result (at (getcampos) 2)]
 
+getcustommaps = [
+    m = []
+    loopfiles i packages/base ogz [
+        if (< (indexof $allmaps $i) 0) [
+            m = (concat $m $i)
+        ]
+    ]
+    sortlist $m x y [<=s $x $y]
+]
+
+getcustommapslen = [
+    m = []
+    loopfiles i packages/base ogz [
+        if (< (indexof $allmaps $i) 0) [
+            m = (concat $m $i)
+        ]
+    ]
+    listlen $m
+]
+
 getmaster     = [listfilter i $arg1 [ismaster    $i]]
 
 getadmin      = [listfilter i $arg1 [isadmin     $i]]
