Master GUI tweaks and license.

--- a/faned/scripts/cfg/master.cfg
+++ b/faned/scripts/cfg/master.cfg
@@ -1,5 +1,25 @@
-// Fanatic Edition: master.cfg
-    
+// Project: Master GUI
+// License: Creative Commons — CC0 1.0 Universal
+// Version: 1.1
+// Author: Nyne
+//
+// ***********************************************************************************
+// * CC0 1.0 Universal (CC0 1.0)                                                     *
+// * Public Domain Dedication                                                        *
+// * This is a human-readable summary of the Legal Code.                             *
+// *                                                                                 *
+// *    The person who associated a work with this deed has dedicated the work to    *
+// *    the public domain by waiving all of his or her rights to the work            *
+// *    worldwide under copyright law, including all related and neighboring         *
+// *    rights, to the extent allowed by law.                                        *
+// *                                                                                 *
+// *    You can copy, modify, distribute and perform the work, even for commercial   *
+// *    purposes, all without asking permission.                                     *
+// *                                                                                 *
+// *    <http://creativecommons.org/publicdomain/zero/1.0/>                          *
+// *                                                                                 *
+// ***********************************************************************************
+
 newgui master [
     guistayopen [
         guilist [
@@ -44,20 +64,11 @@ newgui master [
                     ]
                 ]
                 guibutton "goto " [goto @cn]
-                guibutton "suicide " [
-                    echo (concatword "^f9FanEd^f7::suicide: Suiciding " (getclientname @cn) " (" @cn ") ...")
-                    if ((isspectator @cn)) [
-                        spectator 0 @cn; spectator 1 @@cn
-                    ] [
-                        spectator 1 @cn; spectator 0 @@cn
-                    ]
-                ]
                 if (=s (getclientteam $cn) "good") [guibutton "switch evil " [setteam @cn "evil"]] [guibutton "switch good " [setteam @cn "good"]]
                 if ((isspectator $cn)) [guibutton "unspectate " [spectator 0 @cn]] [guibutton "spectate " [spectator 1 @cn]]
-                guibutton "kick " [kick @cn]
                 if (ismaster $cn) [guibutton "take master " [setmaster 0 @cn]] [guibutton "give master " [setmaster 1 @cn]]
             ]
         ]
     ]
 ] "Master"
-    
+
