Add autocomplete for some Lua functions.

--- a/faned/data/defaults.cfg
+++ b/faned/data/defaults.cfg
@@ -143,6 +143,57 @@ keymap 228 AE
 keymap 246 OE
 keymap 252 UE
 
+
+listcomplete lua [
+    "calc()"
+    "detectcube()"
+    "detectdist()"
+    "detecttex()"
+    "execluadir()"
+    "importimagetexture()"
+    "importimagevcolor()"
+    "lua_N_DAMAGE()"
+    "lua_N_DIED()"
+    "lua_N_EDITMODE()"
+    "lua_N_EVENT()"
+    "lua_N_SAYTEAM()"
+    "lua_N_SERVCMD()"
+    "lua_N_SHOTFX(()"
+    "lua_N_TEXT()"
+    "sauer()"
+    "sauer_build()"
+    "sauer_copy()"
+    "sauer_echo()"
+    "sauer_editent()"
+    "sauer_editface()"
+    "sauer_edittex()"
+    "sauer_entinfo()"
+    "sauer_getcubeinfo()"
+    "sauer_getplayerinfo()"
+    "sauer_getsel()"
+    "sauer_hashstring()"
+    "sauer_loadimage()"
+    "sauer_lookupcube()"
+    "sauer_paste()"
+    "sauer_print()"
+    "sauer_say()"
+    "sauer_sel()"
+    "sauer_setplayerinfo()"
+    "sauer_setsel()"
+    "sauer_vcolor()"
+    "setchatcmd.guard=0"
+    "setservcmd.guard=0"
+    "settypewriterchars()"
+    "settypewriterprint()"
+    "texavggen()"
+    "texavgload()"
+    "tigerhash()"
+    "typewriter()"
+    "veclen()"
+    "vecnorm()"
+    "vecsub()"
+]
+
 ragdollairfric 1
 ragdollbodyfric 1
 ragdollconstrain 100
