Icons and scoreboard tweaks.

--- a/faned/init.cfg
+++ b/faned/init.cfg
@@ -70,7 +70,7 @@ if $_megagun_snoutx10k_visor [
     addzip "faned/skins/megagun_snoutx10k_visor.pak"
 ]
 
-addzip "faned/skins/collect_ogro2_hudguns.pak"
+addzip faned/skins/collect_ogro2_hudguns.pak
 
 createine _pyccna_inky 1
 if $_pyccna_inky [
