Add more library.cfg items.

--- a/faned/scripts/cfg/library.cfg
+++ b/faned/scripts/cfg/library.cfg
@@ -325,6 +325,10 @@ get!ignored   = [listfilter i $arg1 [! (isignored   $i)]]
 
 get!bots      = [listfilter i $arg1 [! (isai        $i)]]
 
+guirainbowtextfast = [guitext (concatword "^f" (rnd 8) $arg1) $arg2]
+
+guirainbowtextslow = [guitext (concatword "^f" (div (+ (mod (getmillis) 7000) 1000) 1000) $arg1) $arg2]
+
 inttorgb = [
    $arg2 = (& (>> $arg1 16) 0xFF)
    $arg3 = (& (>> $arg1 8) 0xFF)
@@ -343,6 +347,18 @@ randomclientname = [getclientname (at (listclients $arg1) (rnd (listlen (listcli
 randomclientnum = [at (listclients $arg1) (rnd (listlen (listclients $arg1)))]
 
 randomlistitem = [at $arg1 (rnd (listlen $arg1))]
+
+randomstringlower = [
+	local _s = ""
+	loop i $arg1 [_s = (concatword $_s (substr "abcdefghijklmnopqrstuvwxyz" (rnd 26) 1))]
+	result $_s
+]
+
+randomstringupper = [
+	local _s = ""
+	loop i $arg1 [_s = (concatword $_s (substr "ABCDEFGHIJKLMNOPQRSTUVWXYZ" (rnd 26) 1))]
+	result $_s
+]
 
 rgbtoint = [+ (<< $arg1 16) (<< $arg2 8) $arg3]
 
