--- a/faned/init.cfg
+++ b/faned/init.cfg
@@ -2,6 +2,7 @@
 
 addzip "faned/init.pak"
 addzip "faned/type/typegen.pak"; exec typegen.cfg
+addzip "faned/skins/nyne_cube.pak"
 
 createine = [if (! (getalias $arg1)) [$arg1 = $arg2]]
 
@@ -70,7 +71,7 @@ if $_megagun_snoutx10k_visor [
     addzip "faned/skins/megagun_snoutx10k_visor.pak"
 ]
 
-addzip faned/skins/collect_ogro2_hudguns.pak
+addzip "faned/skins/collect_ogro2_hudguns.pak"
 
 createine _pyccna_inky 1
 if $_pyccna_inky [
