Move cube.png to faned/data.

--- a/faned/init.cfg
+++ b/faned/init.cfg
@@ -1,9 +1,5 @@
 // Fanatic Edition: init.cfg
 
-addzip "faned/init.pak"
-addzip "faned/type/typegen.pak"; exec typegen.cfg
-addzip "faned/skins/nyne_cube.pak"
-
 createine = [if (! (getalias $arg1)) [$arg1 = $arg2]]
 
 execcfgdir = [loopfiles f $arg1 cfg [exec (format "%1/%2.cfg" $arg1 $f)]]
@@ -119,6 +115,12 @@ if $_suicizer_pickups [
 ]
 
 addzip "faned/skins/pyccna_sgt.ross.pak"
+
+showmapshot = [ 
+    guibar
+    guiimage (concatword "packages/base/" (if (> $numargs 0) [result $arg1] [at $guirollovername 0]) ".jpg") $guirolloveraction 4 1 "faned/data/cube.png"
+]
+
 sleep 0 [
     playermodelnum = 6
     playermodeldir5 = "sgt.ross"
@@ -126,6 +128,8 @@ sleep 0 [
     playermodelname5 = "SGT. Ross"
     playermodelstory5 = [SGT. Scott Ross is an elite member of the Contingent for Undertaking Battalions of Evil (C.U.B.E.). Sgt. Ross had developed a largely redacted file during his service and prefers to work alone, but enjoys the occasional team operations. Armed with his custom Uzi, SGT. Ross will let nothing stop him; not even his fellow soldiers.]
 ]
+
+addzip "faned/type/typegen.pak"; exec typegen.cfg
 
 _consolescrollstate = 0
 
