--- a/faned/scripts/cfg/options.cfg
+++ b/faned/scripts/cfg/options.cfg
@@ -1014,9 +1014,9 @@ newgui options [
             guilist [
             guitext "// Anti-Cheat: " 
                 if $anticheat [ 
-                    guibutton "Disable" [anticheat 0] "checkbox_on" 
+                    guibutton "Enabled" [anticheat 0] "checkbox_on" 
                 ] [ 
-                    guibutton "Enable" [anticheat 1] "checkbox_off" 
+                    guibutton "Disabled" [anticheat 1] "checkbox_off" 
                 ]
             ]
             guitab "Autoexec" 
