Tweak and shorten combatgear.cfg.

--- a/faned/scripts/cfg/combatgear.cfg
+++ b/faned/scripts/cfg/combatgear.cfg
@@ -1,6 +1,6 @@
 // Project: Combatgear
 // License: Creative Commons — CC0 1.0 Universal
-// Version: 1.1
+// Version: 1.2
 // Author: Nyne
 // Notes: Based on meows's »zOMBATGEAR« script.
 //        <https://github.com/zombie-crew/zombie-menu>
@@ -27,8 +27,8 @@ combatgear = [
         echo "^f9FanEd^f7::combatgear: ^f3#error: ^f7operation only allowed in edit mode"
         sound (registersound "../../faned/sounds/freesound.org/56097_7037-lq" 255)
     ] [
-        entdrop 1
-        if (= $editing 0) [edittoggle]
+        _e = $entdrop; entdrop 1
+        if (! $editing) edittoggle
         loop i  3 [newent bullets 666]
         loop i  3 [newent cartridges 666]
         loop i  3 [newent grenades 666]
@@ -39,20 +39,18 @@ combatgear = [
         loop i 45 [newent health 666]
         loop i 45 [newent healthboost 666]
         loop i  1 [newent quaddamage 666]
-        if (= $editing 1) [edittoggle]
+        if $editing edittoggle
         sleep 100 [
-            if (= $editing 0) [edittoggle]
+            if (! $editing) edittoggle
             loop i 45 [newent health 666]
             loop i 45 [newent healthboost 666]
-            newent particles 11 277 277 0x29A 666
-            if $editing [edittoggle]
+            if $editing edittoggle
         ]
         sleep 1000 [
-            if (= $editing 0) [edittoggle]
+            if (! $editing) edittoggle
             entfind * 666; delent
-            entfind * * * * 666; delent
-            entdrop 2
-            if $editing [edittoggle]
+            entdrop $_e
+            if $editing edittoggle
         ]
     ]
 ]
