Extinfo update; use also extinfos for scoreboard and hudscores, removed crouch, cleanups.

--- a/faned/data/defaults.cfg
+++ b/faned/data/defaults.cfg
@@ -143,7 +143,6 @@ keymap 228 AE
 keymap 246 OE
 keymap 252 UE
 
-
 listcomplete lua [
     "calc()"
     "detectcube()"
@@ -210,7 +209,7 @@ ragdollwaterfric 1
 screenshotdir "screenshots/"
 screenshotformat 2
 
-servpingrate 10000
+servpingrate 1000
 
 bind W forward
 bind A left
@@ -260,7 +259,7 @@ specbind "SPACE"  [if $deathcamerastate [jump] [follow]]
 
 bind TAB "showscores"
 
-bind C crouch
+bind C efficiency_chainsaw
 bind E edittoggle
 bind G togglezoom
 bind X combatgear
