--- a/faned/scripts/cfg/servers.cfg
+++ b/faned/scripts/cfg/servers.cfg
@@ -34,7 +34,9 @@ newgui servers [
                 guicheckbox "auto-auth" autoauth
                 guibar
                 guibutton "reconnect" [reconnect]
-                guistrut 20
+                guibar
+                guibutton "search" [newgui _gui guiplayers "Search"; showgui _gui] action
+                guistrut 10
                 guibutton "> configure" [showgui configservers] 0
             ]
             guibar
