Add variables for teamcolored trails, cleanups.

--- a/faned/scripts/cfg/rndlights.cfg
+++ b/faned/scripts/cfg/rndlights.cfg
@@ -1,6 +1,6 @@
 // Project: Random Lights Generator
 // License: Creative Commons — CC0 1.0 Universal
-// Version: 1.0
+// Version: 0.9
 // Author: Nyne
 //
 // ***********************************************************************************
@@ -30,7 +30,7 @@ rndlights = [
             ] [
                 entcancel; entfind; numents = $enthavesel; entcancel
             ]
-            editent (+ $numents 1) (rnd 1024) (rnd 1024) 529 1 $arg2 (rnd $arg3) (rnd $arg4) (rnd $arg5)
+            editent (+ $numents 1) (rnd 1024) (rnd 1024) 529 1 $arg2 (rnd $arg3) (rnd $arg4) (rnd $arg5) // TODO: mapsize variable
         ]
         sleep 1000 calclight
     ]
