Add cloudlayer gui.

--- a/faned/scripts/cfg/main.cfg
+++ b/faned/scripts/cfg/main.cfg
@@ -38,11 +38,11 @@ newgui main [
                 guibutton "Prefabs"       [showgui prefabs]
                 guibutton "Particles"     [showgui newparticles]
                 guibutton "Skyboxes"      [showgui skyboxes]
-                guibutton "Waypoints"     [showgui waypoints]
+                guibutton "Cloudlayers"   [showgui cloudlayers]
                 guibutton "Mapmodels"     [showgui mapmodels]
-                guibutton "Colorpicker"   [showgui colorpicker]
                 guibar
                 guibutton "Load Map"      [showgui maps]
+                guibutton "Colorpicker"   [showgui colorpicker]
                 guibutton "Editing Help"  [showgui editing]
                 guibutton "Advanced Help" [showgui advanced]
             ]
