Move waypoint gui to advanced editing gui.

--- a/faned/scripts/cfg/library.cfg
+++ b/faned/scripts/cfg/library.cfg
@@ -118,6 +118,17 @@ gcf = [
     result $_lib_res
 ]
 
+inlist = [
+  r = 0
+  n = ( listlen $arg2 )
+  loop i $n [
+    if (strcmp $arg1 (at $arg2 $i)) [
+      r = 1
+    ]
+  ]
+  result $r
+]
+
 listfactors = [
     _lib_res = ""
     loop i $arg1 [if (! (mod $arg1 (+ $i 1))) [_lib_res = (concat $_lib_res (+ $i 1))]]
@@ -125,6 +136,17 @@ listfactors = [
 ]
 
 listtoargs = [do (concat $arg1 $arg2)]
+
+listindex = [
+  s = 0
+  n = (listlen $arg1)
+  loop i $n [
+    if (strcmp $arg2 (at $arg1 $i)) [
+      s = $i
+    ]
+  ]
+  result $s
+]
 
 listinstances = [
     _lib_res = 0
@@ -268,16 +290,32 @@ demoffw = [
     ]
 ]
 
+ea = [at (entget) (+ $arg1 1)]
+
+et = [at (entget) 0]
+
 editcube = [
     loop i $arg1 [
         if @arg3 [sleep (* $i @@arg3) [editface @@@arg2 1]] [editface @arg2 1]
-   ]
+     ]
     if $arg4 [+= $arg4 (* @arg1 @arg3)]
 ]
 
-getdef = [if $numargs [format "%1 = [%2]" $arg1 $@arg1] [format "getdef = [%1]" $getdef]]
+equaltype = [
+    if (strcmp * $arg1) [result 1] [
+        result (strcmp (et) $arg1)
+     ]
+]
+
+equalattr = [
+    if (strcmp * $arg2) [result 1] [
+        result (= (ea $arg1) $arg2)
+     ]
+]
 
 execdir = [loopfiles f $arg1 cfg [exec (format "%1/%2.cfg" $arg1 $f)]]
+
+getdef = [if $numargs [format "%1 = [%2]" $arg1 $@arg1] [format "getdef = [%1]" $getdef]]
 
 getcamx = [result (at (getcampos) 0)]
 
@@ -300,8 +338,8 @@ getcustommapslen = [
     loopfiles i packages/base ogz [
         if (< (indexof $allmaps $i) 0) [
             m = (concat $m $i)
-        ]
-    ]
+         ]
+     ]
     listlen $m
 ]
 
@@ -324,6 +362,38 @@ get!spectator = [listfilter i $arg1 [! (isspectator $i)]]
 get!ignored   = [listfilter i $arg1 [! (isignored   $i)]]
 
 get!bots      = [listfilter i $arg1 [! (isai        $i)]]
+
+guilistsplit = [
+    guilist [
+        i = 0
+        n = (listlen $arg3)
+        z = (div (+ $n (- $arg2 1)) $arg2)
+        loop a $arg2 [
+            guilist [
+                t = (min (+ $i $z) $n)
+                while [< $i $t] [
+                    push $arg1 (at $arg3 $i)
+                    @@@arg4
+                    pop $arg1
+                    i = (+ $i 1)
+                ]
+            ]
+        ]
+    ]
+]
+
+newgui pastebuffer [
+    guinoautotab [
+        guieditor "#pastebuffer" -80 20
+        guistayopen [
+            guilist [
+                guibutton "exec" [textfocus "#pastebuffer"; textexec]
+                guibar
+                guibutton "clear" [textfocus "#pastebuffer"; textclear]
+             ]
+         ]
+     ]
+]; guipastebuffer = [showgui pastebuffer]
 
 guirainbowtextfast = [guitext (concatword "^f" (rnd 8) $arg1) $arg2]
 
@@ -349,15 +419,15 @@ randomclientnum = [at (listclients $arg1) (rnd (listlen (listclients $arg1)))]
 randomlistitem = [at $arg1 (rnd (listlen $arg1))]
 
 randomstringlower = [
-	local _s = ""
-	loop i $arg1 [_s = (concatword $_s (substr "abcdefghijklmnopqrstuvwxyz" (rnd 26) 1))]
-	result $_s
+    local _s = ""
+    loop i $arg1 [_s = (concatword $_s (substr "abcdefghijklmnopqrstuvwxyz" (rnd 26) 1))]
+    result $_s
 ]
 
 randomstringupper = [
-	local _s = ""
-	loop i $arg1 [_s = (concatword $_s (substr "ABCDEFGHIJKLMNOPQRSTUVWXYZ" (rnd 26) 1))]
-	result $_s
+    local _s = ""
+    loop i $arg1 [_s = (concatword $_s (substr "ABCDEFGHIJKLMNOPQRSTUVWXYZ" (rnd 26) 1))]
+    result $_s
 ]
 
 rgbtoint = [+ (<< $arg1 16) (<< $arg2 8) $arg3]
