Defaults cleanup, add unlockmodels.cfg.

--- a/faned/data/defaults.cfg
+++ b/faned/data/defaults.cfg
@@ -348,12 +348,7 @@ editbind P [domodifier 16]
 
 editbindvar 5 hidehud
 editbindvar 6 entselsnap
-
-createine = [if (! (getalias $arg1)) [$arg1 = $arg2]]
-createine outlinestatus 0
-outlinecolours = ["0xFF0000" "0x00FF00" "255" "1" "0xFFFF00" "0xFF00FF" "0x00FFFF" "0xFFFFFF" "0x00FF7F" "0xFF7F00" "0x7F00FF" "0xFF007F" "0x007FFF" "0"]
-editbind "7" [outline (at $outlinecolours $outlinestatus); if (= $outline 0) [sleep 1 [outlinestatus = 0]; echo "Outline 0"] [echo (concat Outline (+ $outlinestatus 1))]; outlinestatus = (+ $outlinestatus 1)]
-
+editbindvar 7 outline
 editbindvar 8 wireframe
 editbindvar 0 allfaces
 editbind K calclight
