Add more special CMDs.

--- a/faned/scripts/cfg/advanced.cfg
+++ b/faned/scripts/cfg/advanced.cfg
@@ -79,6 +79,8 @@ newgui advanced [
             guitab "Special CMDs"
             guibutton "cmd: /blindaclouds"        [saycommand "/cloudcolour 78 7 97; cloudlayer blindabuser/blindaclouds; cloudscale 0.5; cloudscrollx 0.1; cloudscrolly 0.1"]
             guibutton "cmd: /dust fog"            [saycommand "/fog 1000; newent particles 3 1000 0x000"]
+            guibutton "cmd: /fake ice"            [saycommand "/settex 764; vshaderparam parallaxscale 1 1; alpha; valpha 0.85"]
+            guibutton "cmd: /fake water"          [saycommand "/settex 763; vcolor 0.1 0.6 0.9; vscroll 0.2 0.2; vshaderparam parallaxscale 1 1; noclip; water; alpha; valpha 0.85 0"]
             guibutton "cmd: /freezepad"           [saycommand "/newent jumppad 0 0 0 -1; newent teleport 666 -1 0 -1; newent teledest 666"]
             guibutton "cmd: /glass mirror"        [saycommand "/glass; newent envmap 100; recalc"]
             guibutton "cmd: /jumppad of death"    [saycommand "/newent jumppad -31072 0 0 -1"]
