--- a/faned/scripts/cfg/library.cfg
+++ b/faned/scripts/cfg/library.cfg
@@ -279,6 +279,8 @@ clearpickups = [
     looplist i $_pickups [clearents $i]
 ]
 
+countdown = [loop i $arg1 [sleep (* $i 1000) [echo (- @arg1 @i)]]]
+
 createine = [if (! (getalias $arg1)) [$arg1 = $arg2]]
 
 demoffw = [
